# serial

./: CMakeLists.txt  package.xml
examples/: serial_example.cpp
include/serial/: serial.hpp
include/serial/impl/: unix.hpp  win.hpp
src/: serial.cpp
src/impl/: unix.cpp  win.cpp
src/impl/list_ports/: list_ports_linux.cpp  list_ports_osx.cpp
src/serial/: CMakeLists.txt
src/serial/src/impl/list_ports/: list_ports_win.cpp
src/serial/tests/: unix_serial_tests.cc
tests/: unix_serial_tests.cc
tests/proof_of_concepts/: tokenizer.cc
tests/unit/: unix_timer_tests.cc
